package paint;

public class TestSwing{
	public static void main (String args[])
	{
		Window win = new Window("Ma fenêtre",800,600);
		
		
	} 

}
