@startuml

title __PAINT's Class Diagram__\n

  namespace paint {
    class paint.Circle {
        + Circle()
        + Circle()
        + setBoundingBox()
        + setSemiAxysX()
        + setSemiAxysY()
    }
  }
  

  namespace paint {
    class paint.Drawing {
        - c : Color
        - list : ArrayList<Figure>
        - nameFigure : String
        - x : int
        - y : int
        + Drawing()
        + getList()
        + mouseClicked()
        + mouseDragged()
        + mouseEntered()
        + mouseExited()
        + mouseMoved()
        + mousePressed()
        + mouseReleased()
        + paintComponent()
        + recallDrawing()
        + reset()
        + saveDrawing()
        + setColor()
        + setNameFigure()
    }
  }
  

  namespace paint {
    class paint.Ellipse {
        # semiAxysX : int
        # semiAxysY : int
        + Ellipse()
        + Ellipse()
        + draw()
        + getPerimeter()
        + getSurface()
        + setBoundingBox()
        + setSemiAxysX()
        + setSemiAxysY()
        + toString()
    }
  }
  

  namespace paint {
    abstract class paint.Figure {
        # c : Color
        + Figure()
        + Figure()
        {abstract} + draw()
        {abstract} + getPerimeter()
        {abstract} + getSurface()
        {abstract} + setBoundingBox()
        + toString()
    }
  }
  

  namespace paint {
    class paint.Point {
        - X : int
        - Y : int
        + Point()
        + Point()
        + getX()
        + getY()
    }
  }
  

  namespace paint {
    class paint.Rectangle {
        # length : int
        # width : int
        + Rectangle()
        + Rectangle()
        + Rectangle()
        + draw()
        + getLength()
        + getPerimeter()
        + getSurface()
        + getWidth()
        + setBoundingBox()
        + setLength()
        + setWidth()
        + toString()
    }
  }
  

  namespace paint {
    class paint.Square {
        + Square()
        + Square()
        + setBoundingBox()
        + setLength()
        + setWidth()
    }
  }
  

  namespace paint {
    class paint.TestSwing {
        {static} + main()
    }
  }
  

  namespace paint {
    class paint.Window {
        + Window()
        + actionPerformed()
    }
  }
  

  paint.Circle -up-|> paint.Ellipse
  paint.Drawing .up.|> java.awt.event.MouseListener
  paint.Drawing .up.|> java.awt.event.MouseMotionListener
  paint.Drawing -up-|> javax.swing.JPanel
  paint.Ellipse -up-|> paint.Figure
  paint.Figure .up.|> java.io.Serializable
  paint.Figure o-- paint.Point : origin
  paint.Point .up.|> java.io.Serializable
  paint.Rectangle -up-|> paint.Figure
  paint.Square -up-|> paint.Rectangle
  paint.Window .up.|> java.awt.event.ActionListener
  paint.Window -up-|> javax.swing.JFrame
  paint.Window o-- paint.Drawing : draw


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
